[package]
name = "lit-ecdsa-wasm-combine"
version = "0.1.0"
edition = "2021"
authors = ["brendon <brendon@litprotocol.com>"]
description = "WASM friendly recombination code for threshold ECDSA."
homepage = "https://github.com/lit-protocol/lit-ecdsa-wasm-combine"
license = "MIT"

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
web-sys = { version = "0.3.5", features = ["console"] }
js-sys = "0.3.59"

#rand = { version = "0.6" }
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.64"

num-bigint = { version = "0.2.2", features = [ "rand"] }
num-integer = "0.1"
num-traits = "0.2.15"


elliptic-curve = { version = "0.13.5", features = ["serde"] }  
k256 = { version = "0.13.0", features = ["sha256", "ecdsa", "serde", "ecdsa-core", "expose-field", "hash2curve"], optional = false }
p256 = { version = "0.13", features = ["ecdsa-core", "expose-field", "hash2curve", "sha256", "serde"] }
hex = "0.4.3"
sha2 = "0.10"

# [dependencies.rand]
# getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "0.1.6", optional = false }
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2", features = ["js"] }
frost-core = { version =  "1.0.0-rc.0", git = "https://github.com/LIT-Protocol/frost.git", features = ["internals"] }
frost-ed25519 = { version =  "1.0.0-rc.0", git = "https://github.com/LIT-Protocol/frost.git" }
# tokio = { version = "1.28.0",  features = ["rt-multi-thread"] }

[dev-dependencies]
digest = "0.10"
vsss-rs = { version = "3.2", features = ["std"] }

[dependencies.rand]
version = "0.8"
package = "rand"

[profile.release]
lto = true
opt-level = "z"
