[package]
name = "lit-ecdsa-wasm-combine"
version = "0.2.0"
edition = "2021"
authors = ["brendon <brendon@litprotocol.com>"]
description = "WASM friendly recombination code for threshold ECDSA."
homepage = "https://github.com/lit-protocol/lit-ecdsa-wasm-combine"
license = "MIT"

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.5", features = ["console"] }
js-sys = "0.3.59"

serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.64"

hd-keys-curves-wasm = { default-features = false, features = ["k256", "p256"], git = "https://github.com/LIT-Protocol/hd-keys-curves-wasm.git" }
k256 = { version = "0.13.0", features = ["sha256", "ecdsa", "serde", "ecdsa-core", "expose-field", "hash2curve"], optional = false }
p256 = { version = "0.13", features = ["ecdsa-core", "expose-field", "hash2curve", "sha256", "serde"] }
hex = "0.4.3"
sha2 = "0.10"

console_error_panic_hook = { version = "0.1.6", optional = false }
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
digest = "0.10"
vsss-rs = "4.3"

[dependencies.rand]
version = "0.8"
package = "rand"

[profile.release]
lto = true
opt-level = "z"
